--- a/_config.yml
+++ b/_config.yml
@@ -12,42 +12,38 @@ baseurl: ""
 lang: en
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Shanghai
+timezone: Asia/Singapore
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Jinchao Li # the main title
+title: Daren Tan # the main title
 
-tagline: Jinchao Li's Homepage # it will display as the sub-title
+tagline: Just a personal blog. # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  Jinchao Li's Homepage.
+  Daren Tan's Homepage.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: # "https://jinchaoli.com"
+url: https://darentan.dev
 
 github:
-  username: JinchaoLove # change to your github username
+  username: darentanrw # change to your github username
 
 twitter:
-  username: JinchaoLove # change to your twitter username
+  username: # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Jinchao Li
-  email: 1391110675@qq.com # change to your email address
+  name: Daren Tan
+  email: daren28@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://github.com/JinchaoLove # change to your github homepage
-    - https://scholar.google.com/citations?hl=en&user=0LWE_dkAAAAJ # googlescholar
-    - https://www.researchgate.net/profile/Jinchao-Li-3 # researchgate
-    - https://twitter.com/JinchaoLove # twitter
-    - https://zhihu.com/people/jinchaoli # zhihu
+    - https://github.com/darentanrw # change to your github homepage
+    - https://www.linkedin.com/in/darentanrw
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
 
 google_site_verification: # fill in to your verification string
 
@@ -68,10 +64,10 @@ google_analytics:
 #     light  - Use the light color scheme
 #     dark   - Use the dark color scheme
 #
-theme_mode: # [light|dark]
+theme_mode: dark # [light|dark]
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "/assets/img/avatar/Jinchao.png" #"/commons/avatar.jpg"
+avatar: "/assets/img/avatar/daren.JPG" #"/commons/avatar.jpg"
 
 # boolean type, the global switch for TOC in posts.
 toc: true
@@ -109,7 +105,7 @@ pwa:
   enabled: true # the option for PWA feature
 
 paginate: 10
-paginate_path: "/blog/page:num/"
+paginate_path: "/projects/page:num/"
 
 # ------------ The following options are not recommended to be modified ------------------
 
@@ -130,9 +126,9 @@ collections:
     sort_by: order
 
 defaults:
-  # blog home
+  # projects home
   - scope:
-      path: "blog"
+      path: "projects"
     values:
       articles:
         excerpt_type: html
@@ -146,7 +142,7 @@ defaults:
       toc: true # Display TOC column in posts.
       # DO NOT modify the following parameter unless you are confident enough
       # to update the code of all other post links in this project.
-      permalink: /blog/:title/ # /posts/:title/
+      permalink: /projects/:title/ # /posts/:title/
   # drafts
   - scope:
       path: _drafts
